--- a/taller1/styles.css
+++ b/taller1/styles.css
@@ -21,19 +21,24 @@ input,
     color: white;
     cursor: pointer;
 }
- 
 
 #addTaskBtn:hover {
     background-color: #4cae4c;
 }
-button{
 
-    margin: 10px;
-    padding: 10px;
+button {
+    margin: 5px;
+    padding: 5px 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
+    cursor: pointer;
 }
-div {
+
+button:hover {
+    opacity: 0.8;
+}
+
+ul {
     list-style-type: none;
     padding: 0;
     width: 300px;
@@ -47,6 +52,8 @@ li {
     border-radius: 4px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
+
 
  
