--- a/taller1/styles.css
+++ b/taller1/styles.css
@@ -3,8 +3,8 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 50px;
-    background-color: #f9f9f9;
+    margin-top: 90px;
+    background-color: #383232;
     color: #333;
 }
 
@@ -16,20 +16,29 @@ input,
     border-radius: 4px;
 }
 
+ h1{
+
+    color: #8d7979;
+ }
+ div{
+
+    padding: 30px;
+    background-color:#ddcac7
+ }
 #addTaskBtn {
-    background-color: #5cb85c;
+    background-color: #cca099;
     color: white;
     cursor: pointer;
 }
 
 #addTaskBtn:hover {
-    background-color: #4cae4c;
+    background-color: #8a8584;
 }
 
 button {
     margin: 5px;
     padding: 5px 10px;
-    border: 1px solid #ccc;
+    border: 1px solid #cfb1b1;
     border-radius: 4px;
     cursor: pointer;
 }
@@ -45,10 +54,10 @@ ul {
 }
 
 li {
-    background-color: #fff;
+    background-color: #d4baba;
     margin: 5px 0;
     padding: 10px;
-    border: 1px solid #ddd;
+    border: 1px solid #867575;
     border-radius: 4px;
     display: flex;
     justify-content: space-between;
